--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,6 +5,19 @@
     <title>website1000</title>
   </head>
   <body>
+    <h1>website1000</h1>
+    <form style="display: inline" action="/log/in">
+        <input type="submit" value="log in" />
+    </form>
+    <form style="display: inline" action="/log/out">
+        <input type="submit" value="log out" />
+    </form>
+    <form style="display: inline" action="/log/up">
+        <input type="submit" value="log up" />
+    </form>
+    <form style="display: inline" action="/log/down">
+        <input type="submit" value="log down" />
+    </form>
     {{{body}}}
   </body>
 </html>
