initial socket functionality

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -19,5 +19,6 @@
         <input type="submit" value="log down" />
     </form>
     {{{body}}}
+    <script src="bundle.js"></script>
   </body>
 </html>
