--- a/views/log-up.hbs
+++ b/views/log-up.hbs
@@ -3,4 +3,5 @@
   user: <input type="text" name="name"><br>
   pass: <input type="password" name="password"><br>
   <input type="submit" value="Submit">
+  <p>{{message}}</p>
 </form>
