--- a/views/log-in.hbs
+++ b/views/log-in.hbs
@@ -1,5 +1,5 @@
-<h3>log up</h3>
-<form action="/log/up" method="post">
+<h3>log in</h3>
+<form action="/log/in" method="post">
   user: <input type="text" name="name"><br>
   pass: <input type="password" name="password"><br><br>
   <input type="submit" value="Submit">
